  whenever a particular variable is read or written.

- In `stacked window' configuration, the data window automatically
  pops up as soon as some value is displayed, and it pops down as soon
  as the last visible display is deleted.

- You can easily display variable values in the data window by
  double-clicking on an occurrence.

- Using GDB, VALUEs that are repeated N times are now displayed as
  `VALUE <Nx>', saving space in the data display; see `Edit->GDB
  Settings->Threshold for repeated print elements'.  Setting the
  `expandRepeatedValues' resource to `on' turns this off.

- Displays are persistent across recompilation.  This is achieved via
  `deferred' displays, whose creation is deferred until a particular
  scope is entered.  In the same veine, displays are also persistent
  across debugging sessions, even if no core dump was included.


Program Execution
-----------------

- Signal handling.  Using GDB, you can control whether signals are
  passed to your program and whether they interrupt execution.  See
  `Status->Signals' for details.

- Frozen X display detection.  When detecting a grabbed mouse pointer
  after reaching a breakpoint, DDD now automatically continues
  execution, rather than attempting to ungrab the pointer.


Help and Assistance
-------------------

- Improved help system.  In accordance with the Motif style guide, F1
  invokes help on the item pointed at; Shift+F1 lets you choose an item.

- Tips of the day.  Upon startup, DDD gives a hint on DDD usage.


Miscellaneous
-------------

- User-defined commands.  Using GDB, you can record and edit new
  commands and assign them to buttons; see `Commands->Define Command'.
  All commands are saved across DDD sessions.

- `File->Open Recent' allows you to re-open the nine most recently
  debugged programs.

- All dialogs can be properly resized.

- You can have the most important dialogs be realized as
  non-transient windows, allowing the DDD main window to obscure